<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="nationality">Nationality</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="forgetpassword">ForgetPassword</string>
    <string name="verification_code">Verification Code</string>
    <string name="civilization">Civilization</string>
    <string name="hotiel">Hotiel</string>
    <string name="tourist_guide">Tourist Guide</string>
    <string name="lemosin">Lemosin</string>
    <string name="next">Next</string>
    <string name="profile">profile</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="please_enter_user_name">please Enter User Name</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="please_enter_your_password">Please Enter Your password</string>
    <string name="order">Order</string>
    <string name="orderdriver">OrderDriver</string>
    <string name="driver">Driver</string>
    <string name="language">Language</string>
    <string name="darkmode">DarkMode</string>
    <string name="menu">Menu</string>
    <string name="Title">Bassant</string>
    <string name="Email">BassantSabry207@gamil.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="account">Account</string>
    <string name="phone">phone</string>
    <string name="savedata">SaveData</string>
    <string name="gender">Gender</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="load">load</string>
    <string name="delete">Delete</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="Arabic">عربي</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="don_t_have_an_account_signup">Don’t have an account? SignUp</string>
    <string name="kemet">Kemet</string>
    <string name="loading">loading....</string>
    <string name="app_dark_mode">App Dark Mode</string>
    <string name="lorem_ipsum_dolor_sit">Lorem ipsum dolor sit</string>
    <string name="amet_consetetur">amet,consetetur</string>
    <string name="username">UserName</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="already_have_an_account_signup">Already have an account?signup</string>

    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="ok">Ok</string>
    <string name="order_car">Order Car</string>


    <string-array name="ge">
        <item>Nationality</item>
        <item>Egypt</item>
        <item>America</item>
        <item>Algeria</item>
        <item>Angola</item>
        <item>Australia</item>
        <item>Bahrain</item>
        <item>Brazil</item>
        <item>China</item>
    </string-array>
    <string-array name="Day">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
    </string-array>

    <string-array name="Month">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item> March</item>
        <item>April</item>
        <item>May </item>
        <item> June</item>
        <item>July</item>
        <item> August</item>
        <item>September</item>
        <item> October</item>
        <item>November</item>
        <item> December</item>

    </string-array>

    <string-array name="Year">
        <item>Year</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>


</resources>