<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_setting"
            android:checked="false"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />



        <item
            android:id="@+id/nav_dark"
            android:title="@string/darkmode"
            android:checked="false"
            android:icon="@drawable/ic_darkmode"
           />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            />
    </group>


</menu>