<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDF9D3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="#FFA500"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDF9D3"
        android:orientation="vertical">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:src="@drawable/login" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            >

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:textColor="@color/textcolor"
                android:hint="@string/please_enter_your_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <EditText
                android:id="@+id/Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:textColor="@color/textcolor"
                android:hint="@string/please_enter_your_email"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="forget"
            android:text="@string/forget_password"
            android:textColor="@color/textcolor" />

        <Button

            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:background="@drawable/btn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Or"
           android:layout_gravity="center"
            android:textColor="@color/textcolor" />




      <LinearLayout
          android:id="@+id/btn_google"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/btn_goole"
          android:orientation="horizontal">
          <ImageView
              android:layout_width="20dp"
              android:layout_height="20dp"
              android:scaleType="fitXY"
              android:layout_marginLeft="20dp"
              android:src="@drawable/google"
              android:layout_marginTop="5dp"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
          android:layout_marginTop="5dp"
              android:gravity="center"
              android:layout_marginLeft="30dp"
              android:text="@string/continue_with_google"
              android:textColor="#EC1616"
              android:textAllCaps="false"
              android:textSize="20sp" />
      </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_face"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_face"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/facebo"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/continue_with_facebook"
                android:textColor="#205ECA"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/don_t_have_an_account_signup"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:onClick="signup"
            android:textColor="@color/textcolor" />
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>


</LinearLayout>